# Bezier

./: .gitignore  CMakeLists.txt  package.xml  setup.py
Bezier/: bezier_curve.py  bezier_publisher.py  publisher.py  visualizer.py
include/Bezier/: BezierTrajectory2D.h  SplineVelocity.h  bezier.h
src/: BezierTrajectory2D.cpp  SplineVelocity.cpp  python.cpp
